compilateurDeca/src/test/deca/context/invalid/sans_objet/comparaison/int_cmp_null.deca
// Description:
//    Test de contexte : comparaison type incompatible.
//
// Resultats:
//    Erreur contextuelle : Comparaison invalide entre int et null.
//
// Historique:
//    cree le 13/01/2026

{
    if (1 > null) {}
}